# tech_prog

./: README.md
TASK_1/: tar_backup_script.sh
TASK_2/: CMakeLists.txt
TASK_2/A/: index.h  preparing.py
TASK_2/B/: CMakeLists.txt  lib.cpp  lib.h
TASK_2/C/: main.cpp  main.h
TASK_3/PART_1/: raspberry_pi_build.sh  readme.md
TASK_3/PART_2/: config.ini  readme.md  tg_bot_build.sh
